tests/docs/playwright/ojs/errors/test-no-echo.qmd
---
title: "No Echo + Error"
format: html
---

Tests if an import with `echo: false` eventually shows source on error.

```{ojs}
//| echo: false
import { aq, op, badImport } from '@uwdata/arquero'
x = badImportOnLine11
```
